--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,9 @@
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
     <title>视频</title>
     <script>
-    var url="http://183.230.148.106:8084"
+      var url="";
+    //url="http://183.230.148.106:8084";
+      url="http://localhost:8080";
     </script>
   </head>
   <body>
